mobile responsive draft

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
         HTML/CSS | Javascript | JQuery | Bootstrap | Materialize | Node.js | MySQL | APIs | Firebase | React | Git |
         Github
       </p>
-
-      <h4>Portfolio</a></h4>
+<br>
+      <h4>Portfolio</h4>
       <!--carousel-->
       <div class="carousel">
 
@@ -207,29 +207,28 @@
   <!--section two-->
   <div class="section white">
     <div class="row">
-      <div class="col s2"></div>
-      <div class="col s3 me-image"><img src="assets/images/731B3477.jpg" id="me"></div>
-      <div class="col s6">
+      <div class="col s2  m0 l1 xl2"></div>
+      <div class="col s8 m12 l9 xl8 me-image"><img src="assets/images/731B3477.jpg" id="me">
+      
         <p>
           <br>
+          <h5>Hello!</h5> &nbsp My name is Lesley Pond, I am full-stack web developer. Thanks for checking out my portfolio!
           <br>
-          <h5>Hello!</h5> My name is Lesley Pond, I am full-stack web developer. Thanks for checking out my portfolio!
-          <br>
-          I have a B.A in Psychology with a focus on ergonomics, and 10 years of customer service experience in the
+          &nbsp I have a B.A in Psychology with a focus on ergonomics, and 10 years of customer service experience in the
           hospitality and music industries. I discovered my love for coding through a fellow musician, and since then
           have been working to develop my skills. I love the creativity web development allows!
           <br>
-          I pride myself on my communication skills and ability to problem solve. I have a solid foundation in HTML,
+          &nbsp I pride myself on my communication skills and ability to problem solve. I have a solid foundation in HTML,
           CSS and Javascript, and am comfortable and confident using frameworks such as Bootstrap and jQuery.
           <br>
-          My background as a professional musician gives me experience in self-marketing, graphic design, and video
+          &nbsp My background as a professional musician gives me experience in self-marketing, graphic design, and video
           editing. I love creatively solving problems and delivering solutions in an aesthetically pleasing,
           user-friendly manner.
           <br>
-          I am currently looking for a full-time position as a web developer with a focus on UI/UX in a passionate and
+          &nbsp I am currently looking for a full-time position as a web developer with a focus on UI/UX in a passionate and
           dedicated team environment!
           <br>
-          For some examples of my work please follow the Portfolio links, and feel free to contact me anytime for more
+          &nbsp For some examples of my work please follow the Portfolio links, and feel free to contact me anytime for more
           information!
         </p>
       </div>
@@ -260,37 +259,41 @@
         </div>
     <div class="row">
         <div class="col s3"></div>
-          <div class="col s2 contact-info">
+        
+          <div class="col s12 m2 l2 xl2 contact-info">
               <p class="email">
                 <h5 class="email">Linked In</h5>
-                &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+               <div class="col l3 offset-l3">
                 <a class="contacts" href="https://www.linkedin.com/in/lesley-pond-484343174/" target="_blank">
                     <span style="color:black">
                 <i class="fab fa-linkedin fa-7x "></i>
                 </span>
                 </a>
+              </div>
               </p>
               </div>
-              <div class="col s2 contact-info">
+              <div class="col s12 m2 l2 xl2 contact-info">
                   <p><h5 class="email">Github</h5>
-                    &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+                    <div class="col l3 offset-l3">
                     <a class="contacts" href="https://github.com/LesleyPond"
                     target="_blank">
                         <span style="color:black">
                     <i class="fab fa-github fa-7x "></i>
                     </span>
                   </a>
+                </div>
                   </p>
                   </div>
-                  <div class="col s2 contact-info">
+                  <div class="col s12 m2 l2 xl2 contact-info">
                       <p>
                         <h5 class="email">Resume</h5>
-                        &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+                        <div class="col l3 offset-l3">
                         <a class="contacts" href="assets/files/Lesley Pond resume.pdf" download="Lesley Pond Resume" target="_blank">
                           <span style="color:black">
                         <i class="fas fa-file-download fa-7x "></i>
                       </span>
                       </a>
+                    </div>
                       </p>
                       </div>
         </div>
