--- a/index.html
+++ b/index.html
@@ -304,6 +304,7 @@
     <div class="parallax"><img src="assets/images/web-design-2906159.jpg"></div>
   </div>
 
+  <footer>&copy 2019 Lesley Pond</footer>
 
 
 
