--- a/index.html
+++ b/index.html
@@ -242,6 +242,36 @@
     <div class="parallax"><img src="assets/images/web-design-2906159.jpg"></div>
   </div>
   <div class="section white">
+    <h4 class="centered">Video and Audio</h4>
+    <br>
+    <div class="row">
+      <div class="col s2"></div>
+    <div class="col s10">
+      <iframe width="75%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/725183097&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
+    </div>
+    </div>
+    <div class="row">
+      <div class="col s2"></div>
+      <div class ="col s8">
+          <iframe width="460" height="275" src="https://www.youtube.com/embed/XFleSRli5eY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>&nbsp&nbsp
+          <iframe width="460" height="275" src="https://www.youtube.com/embed/QHNo1FLhY9U" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+    </div>
+      <div class="row">
+          <div class="col s2"></div>
+          <div class ="col s10">
+              <iframe width="460" height="275" src="https://www.youtube.com/embed/DI7F1bB6zT0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>&nbsp&nbsp
+              <iframe width="460" height="275" src="https://www.youtube.com/embed/spEahxV2fyk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+    </div>
+    
+   
+  </div>
+  <div class="parallax-container">
+
+    <div class="parallax"><img src="assets/images/web-design-2906159.jpg"></div>
+  </div>
+  <div class="section white">
     <div class="row">
     <div class="col s2"></div>
     <div class="col s8">
